package Plots;


import TypeData.Coordinate;

public class FinalGangway extends Gangway {

    public  FinalGangway(Coordinate coordinate){
        super(coordinate);
    }
}


