package edu.fiuba.algo3.Turn;

public interface Turner {

    public Turner returnTurn();
    public boolean turnChanged();
}
